# gaia

./: .env.example  .gitignore  TODO  docker-compose.yml  pyproject.toml
docker/: Dockerfile
gaia/: settings.py  urls.py
